[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arp-sdk"
version = "0.1.0"
description = "Python SDK for the Autonomous Robot Protocol (ARP)"
readme = "../../README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Maria Gorskikh" },
]
keywords = ["robotics", "llm", "protocol", "autonomous", "arp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/mariagorskikh/robotcontextprotocol"
Documentation = "https://github.com/mariagorskikh/robotcontextprotocol/tree/main/spec"
Repository = "https://github.com/mariagorskikh/robotcontextprotocol"
Issues = "https://github.com/mariagorskikh/robotcontextprotocol/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
